# cmc_influxdb

./: Cargo.toml  data.json
src/: main.rs  server.rs
