[package]
name = "cmc_influx"
version = "0.1.0"
edition = "2021"

[dependencies]
influxdb = { version = "0.7.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
chrono-tz = "0.9.0"
rand = "0.9.0-alpha.1"
http = "0.2.12"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
daemonize = "0.5.0"
failure = "0.1.8"
colorism = "0.1.0"
